Tensorflow.js Broken in Safari 15 https://bugs.webkit.org/show_bug.cgi?id=226953

Tensorflow shaders use a 'NAN' uniform. This is a reserved keyword
in metal. Add NAN to the reserved list.

'inf' constants need to be replaced with INFINITY, much like nan constants need to be replaced with NAN
Reviewed by Kenneth Russell.

* src/compiler/translator/TranslatorMetalDirect.cpp:
(sh::GetMslKeywords):


Canonical link: https://commits.webkit.org/238839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278898 268f45cc-cd09-0410-ab3c-d52691b4dbfc